# Task-Calendar-API

./: .gitignore  .ipynb  IDEAS.md  README.md  app.py  database.py  dto.py  models.py  pyproject.toml  repository.py  settings.py  uow.py
controllers/: __init__.py  calendar.py  task.py  tasks.py
core/: exceptions.py  lifespan.py
db/: config.py  manager.py  models.py  repository.py  types.py  uow.py
repository/: __init__.py  base.py  calendar.py  task.py
sql/: calendar_notes_table_created.sql  calendar_notes_table_dropped.sql  extensions_dropped.sql  tasks_table_created.sql
