[project]
name = "asyncpg-litestar"
version = "0.1.0"
description = "..."
authors = [
    {name = "EnchantedPy",email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "litestar (>=2.17.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
